# harphonium

./: .gitignore  BUILD_STATUS.md  GIT_GUIDELINES.md  PHASE2_COMPLETE.md  README.md  ROADMAP.md  RUNTIME_WORKAROUND.md  SOLUTION.md  dev.sh  index.html  package-lock.json  package.json  test_release_apk.sh
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android/app/src/main/: AndroidManifest.xml
src-tauri/android/app/src/main/java/uk/co/joebutton/harphonium/: MainActivity.kt
src-tauri/android/app/src/main/java/uk/co/joebutton/synthmob/: MainActivity.kt
src-tauri/android/app/src/main/res/values/: themes.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  jni_bridge.rs  lib.rs  main.rs
src-tauri/src/audio/: android.rs  desktop.rs  mod.rs  synthesis.rs
src/components/: EffectsTab.css  EffectsTab.tsx  Keyboard.css  Keyboard.tsx  KeyboardTab.css  KeyboardTab.tsx  SynthTab.css  SynthTab.tsx
src/types/: lodash.throttle.d.ts
