[package]
name = "harphonium"
version = "0.1.0"
description = "A mobile synthesizer built with Tauri and React"
authors = ["you"]
license = ""
repository = ""
default-run = "harphonium"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
fundsp = "0.20"         # Advanced audio DSP library (local checkout)

# Cross-platform audio dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = "0.15"           # Desktop audio library

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.6.1"            # Android audio library

[[bin]]
name = "harphonium"
path = "src/main.rs"

[lib]
name = "harphonium_lib"
crate-type = ["cdylib"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[patch.crates-io]
fundsp = { git = "https://github.com/Joeboy/fundsp", branch = "adsr-silent-until-attacked" }
